<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startColor">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/clear_iv"
        android:layout_width="@dimen/width_1"
        android:layout_height="@dimen/height_1"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        android:src="@drawable/ic_clear_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_lbl1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_iv" />

    <TextView
        android:id="@+id/detail_movie_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_6"
        android:layout_marginLeft="@dimen/margin_6"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/detail_lbl2"
        android:textSize="@dimen/text_1"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginLeft="@dimen/margin_3"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/detail_movie_type"
        app:layout_constraintStart_toEndOf="@+id/detail_movie_type"
        app:layout_constraintTop_toTopOf="@+id/detail_movie_type" />

    <TextView
        android:id="@+id/detail_movie_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginLeft="@dimen/margin_3"
        android:text="@string/detail_lbl3"
        android:textSize="@dimen/text_1"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detail_movie_imdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl4"
        android:textColor="@color/white"
        android:textSize="@dimen/text_3"
        app:layout_constraintStart_toStartOf="@+id/detail_movie_type"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_type" />

    <TextView
        android:id="@+id/detail_movie_rotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_7"
        android:layout_marginLeft="@dimen/margin_7"
        android:text="@string/detail_lbl5"
        android:textColor="@color/white"
        android:textSize="@dimen/text_3"
        app:layout_constraintBottom_toBottomOf="@+id/detail_movie_imdb"
        app:layout_constraintStart_toEndOf="@+id/detail_movie_imdb"
        app:layout_constraintTop_toTopOf="@+id/detail_movie_imdb" />

    <TextView
        android:id="@+id/detail_movie_metacritic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_7"
        android:layout_marginLeft="@dimen/margin_7"
        android:text="@string/detail_lbl6"
        android:textColor="@color/white"
        android:textSize="@dimen/text_3"
        app:layout_constraintBottom_toBottomOf="@+id/detail_movie_rotten"
        app:layout_constraintEnd_toEndOf="@+id/detail_movie_duration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/detail_movie_rotten"
        app:layout_constraintTop_toTopOf="@+id/detail_movie_rotten" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_lbl7"
        app:layout_constraintEnd_toEndOf="@+id/detail_movie_imdb"
        app:layout_constraintStart_toStartOf="@+id/detail_movie_imdb"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_imdb" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_lbl8"
        app:layout_constraintEnd_toEndOf="@+id/detail_movie_rotten"
        app:layout_constraintStart_toStartOf="@+id/detail_movie_rotten"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_rotten" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_lbl9"
        app:layout_constraintEnd_toEndOf="@+id/detail_movie_metacritic"
        app:layout_constraintStart_toStartOf="@+id/detail_movie_metacritic"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_metacritic" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="@dimen/width_4"
        android:layout_height="@dimen/height_4"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/detail_movie_desc"
        android:layout_width="@dimen/width_5"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/detail_lbl10"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginLeft="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_3"
        android:layout_marginRight="@dimen/margin_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_desc">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_2"
            android:text="@string/detail_lbl11"
            android:textColor="@color/white"
            android:textSize="@dimen/text_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/width_1"
            android:layout_height="@dimen/height_1"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_3"
            android:layout_marginRight="@dimen/margin_3"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_2"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginLeft="@dimen/margin_3"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_3"
        android:layout_marginRight="@dimen/margin_3"
        android:background="@drawable/shape"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/show_lbl10"
        android:textColor="@color/white"
        android:textSize="@dimen/text_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl13"
        android:textColor="@color/white"
        android:textSize="@dimen/text_1"
        app:layout_constraintEnd_toEndOf="@+id/detail_movie_desc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_movie_desc"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cast_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl14"
        android:textColor="@color/white"
        android:textSize="@dimen/text_1"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cast_rv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/screenshots_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
